Adopted liquid 4 standard for non-generation of white space characters

--- a/_includes/banner-icon.html
+++ b/_includes/banner-icon.html
@@ -16,6 +16,5 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 
 Will display the text "Hello" only when the narrow layout is in use.
 
--->{% endcomment %}
-<div class="banner-icon">
-</div>
+-->{%- endcomment -%}
+<div class="banner-icon"></div>
