--- a/_includes/banner-title-area.html
+++ b/_includes/banner-title-area.html
@@ -16,7 +16,7 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 
 Will display the text "Hello" only when the narrow layout is in use.
 
--->{% endcomment %}
+-->{%- endcomment -%}
 <div class="title-area">
 	<div class="title">
 		<p>{{ site.title }}</p>
