--- a/_includes/secondary-column.html
+++ b/_includes/secondary-column.html
@@ -1,24 +1,24 @@
 <!-- This widget divider will only show up in the narrow layout -->
 <div class="secondary-widget-divider"></div>
 
-{% if site.data.setup.drop-down-menu %}{% else %}
+{%- if site.data.setup.drop-down-menu -%}{%- else -%}
 <div class="widget-divider"></div>
-{% endif %}
+{%- endif -%}
 
-<div class="widget">{% include widgets/recent-posts.html %}</div>
-
-<div class="widget-divider"></div>
-
-<div class="widget">{% include widgets/social-media.html %}</div>
+<div class="widget">{%- include widgets/recent-posts.html -%}</div>
 
 <div class="widget-divider"></div>
 
-<div class="widget">{% include widgets/subscribe.html %}</div>
+<div class="widget">{%- include widgets/social-media.html -%}</div>
 
 <div class="widget-divider"></div>
 
-<div class="widget">{% include widgets/older-posts.html %}</div>
+<div class="widget">{%- include widgets/subscribe.html -%}</div>
 
 <div class="widget-divider"></div>
 
-<div class="widget">{% include widgets/categories.html label-modifier=include.label-modifier %}</div>
+<div class="widget">{%- include widgets/older-posts.html -%}</div>
+
+<div class="widget-divider"></div>
+
+<div class="widget">{%- include widgets/categories.html label-modifier=include.label-modifier -%}</div>
