--- a/_includes/vertical-menu.html
+++ b/_includes/vertical-menu.html
@@ -1,23 +1,23 @@
-{% if jekyll.environment != 'production' and site.data.setup.fast-content-build %}{% else %}
+{%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else -%}
 
 <!-- Get the top menu item for which to create the menu -->
-{% if page.menuTopTitle %}
-	{% assign topTitle = page.menuTopTitle %}
-{% else %}
-	{% comment %}<!-- Fix for missing top title for the home page -->{% endcomment %}
-	{% assign home = 'Home' %}
-	{% if site.data.text-for.tHome %}{% assign home = site.data.text-for.tHome %}{% endif %}
-	{% assign topTitle = home %}
-{% endif %}
+{%- if page.menuTopTitle -%}
+	{%- assign topTitle = page.menuTopTitle -%}
+{%- else -%}
+	{%- comment -%}<!-- Fix for missing top title for the home page -->{%- endcomment -%}
+	{%- assign home = 'Home' -%}
+	{%- if site.data.text-for.tHome -%}{%- assign home = site.data.text-for.tHome -%}{%- endif -%}
+	{%- assign topTitle = home -%}
+{%- endif -%}
 
 <nav class="vmenu-container">
 <div class="topTitle"><h1>{{ topTitle }}</h1></div>
 <div class="vmenu">
 
 	<!-- Find all pages that belong to the menuTopTitle of this page -->
-	{% assign topTitlePages = site.pages | where:'menuInclude', true | where:'menuTopTitle', topTitle %}
+	{%- assign topTitlePages = site.pages | where:'menuInclude', true | where:'menuTopTitle', topTitle -%}
 			
-	{% comment %}<!-- note: these html comment tags are for editor coloring support
+	{%- comment -%}<!-- note: these html comment tags are for editor coloring support
 			
 	Due to the poor support for variables in Liquid we have to resort to some fairly laborious code.
 			
@@ -29,194 +29,194 @@
 			
 	Lastly, step through the lists to create the actual sub menu's
 			
-	-->{% endcomment %}
+	-->{%- endcomment -%}
 						
 	<!-- Find all sub menu entries on the topTitlePages -->
-	{% assign subMenuTitles = "" | split: "" %}
-	{% assign subMenuIndexes = "" | split: "" %}
-	{% assign subMenuUrls = "" | split: "" %}
-	{% assign subMenuLinks = "" | split: "" %}
+	{%- assign subMenuTitles = "" | split: "" -%}
+	{%- assign subMenuIndexes = "" | split: "" -%}
+	{%- assign subMenuUrls = "" | split: "" -%}
+	{%- assign subMenuLinks = "" | split: "" -%}
 
-	{% for ape in topTitlePages %}
-		{% if ape.menuSubTitle != nil %}
-			{% assign subMenuTitles = subMenuTitles | push: ape.menuSubTitle %}
-			{% if ape.menuSubIndex != nil %}
-				{% assign subMenuIndexes = subMenuIndexes | push: ape.menuSubIndex %}
-			{% else %}
-				{% assign subMenuIndexes = subMenuIndexes | push: -1 %}
-			{% endif %}
-			{% assign subMenuUrls = subMenuUrls | push: ape.url %}
-			{% if ape.menuLink != nil %}
-				{% assign subMenuLinks = subMenuLinks | push: ape.menuLink %}
-			{% else %}
-				{% assign subMenuLinks = subMenuLinks | push: true %}
-			{% endif %}
-		{% endif %}
-		{% if ape.menuSubs != nil %}
-			{% for sub in ape.menuSubs %}
-				{% assign subMenuTitles = subMenuTitles | push: sub.title %}
-				{% if sub.index != nil %}
-					{% assign subMenuIndexes = subMenuIndexes | push: sub.index %}
-				{% else %}
-					{% assign subMenuIndexes = subMenuIndexes | push: -1 %}
-				{% endif %}
-				{% if sub.url != nil %}
-					{% if sub.anchorId != nil %}
-						{% assign urlWithAnchorId = sub.url | append: '#' | append: sub.anchorId %}
-					{% else %}
-						{% assign urlWithAnchorId = sub.url %}
-					{% endif %}
-				{% else %}
-					{% if sub.anchorId != nil %}
-						{% assign urlWithAnchorId = ape.url | append: '#' | append: sub.anchorId %}
-					{% else %}
-						{% assign urlWithAnchorId = ape.url %}
-					{% endif %}
-				{% endif %}
-				{% assign subMenuUrls = subMenuUrls | push: urlWithAnchorId %}
-				{% if sub.link != nil %}
-					{% assign subMenuLinks = subMenuLinks | push: sub.link %}
-				{% else %}
-					{% assign subMenuLinks = subMenuLinks | push: true %}
-				{% endif %}
-			{% endfor %}
-		{% endif %}
-	{% endfor %}
+	{%- for ape in topTitlePages -%}
+		{%- if ape.menuSubTitle != nil -%}
+			{%- assign subMenuTitles = subMenuTitles | push: ape.menuSubTitle -%}
+			{%- if ape.menuSubIndex != nil -%}
+				{%- assign subMenuIndexes = subMenuIndexes | push: ape.menuSubIndex -%}
+			{%- else -%}
+				{%- assign subMenuIndexes = subMenuIndexes | push: -1 -%}
+			{%- endif -%}
+			{%- assign subMenuUrls = subMenuUrls | push: ape.url -%}
+			{%- if ape.menuLink != nil -%}
+				{%- assign subMenuLinks = subMenuLinks | push: ape.menuLink -%}
+			{%- else -%}
+				{%- assign subMenuLinks = subMenuLinks | push: true -%}
+			{%- endif -%}
+		{%- endif -%}
+		{%- if ape.menuSubs != nil -%}
+			{%- for sub in ape.menuSubs -%}
+				{%- assign subMenuTitles = subMenuTitles | push: sub.title -%}
+				{%- if sub.index != nil -%}
+					{%- assign subMenuIndexes = subMenuIndexes | push: sub.index -%}
+				{%- else -%}
+					{%- assign subMenuIndexes = subMenuIndexes | push: -1 -%}
+				{%- endif -%}
+				{%- if sub.url != nil -%}
+					{%- if sub.anchorId != nil -%}
+						{%- assign urlWithAnchorId = sub.url | append: '#' | append: sub.anchorId -%}
+					{%- else -%}
+						{%- assign urlWithAnchorId = sub.url -%}
+					{%- endif -%}
+				{%- else -%}
+					{%- if sub.anchorId != nil -%}
+						{%- assign urlWithAnchorId = ape.url | append: '#' | append: sub.anchorId -%}
+					{%- else -%}
+						{%- assign urlWithAnchorId = ape.url -%}
+					{%- endif -%}
+				{%- endif -%}
+				{%- assign subMenuUrls = subMenuUrls | push: urlWithAnchorId -%}
+				{%- if sub.link != nil -%}
+					{%- assign subMenuLinks = subMenuLinks | push: sub.link -%}
+				{%- else -%}
+					{%- assign subMenuLinks = subMenuLinks | push: true -%}
+				{%- endif -%}
+			{%- endfor -%}
+		{%- endif -%}
+	{%- endfor -%}
 
 	<!-- Sort all 4 the lists based on the index of the subMenu that was read -->
-	{% assign sortedSubMenuTitles = "" | split: "" %}
-	{% assign sortedSubMenuIndexes = subMenuIndexes | sort %}
-	{% assign sortedSubMenuUrls = "" | split: "" %}
-	{% assign sortedSubMenuLinks = "" | split: "" %}
+	{%- assign sortedSubMenuTitles = "" | split: "" -%}
+	{%- assign sortedSubMenuIndexes = subMenuIndexes | sort -%}
+	{%- assign sortedSubMenuUrls = "" | split: "" -%}
+	{%- assign sortedSubMenuLinks = "" | split: "" -%}
 
-	{% for menuIndex in sortedSubMenuIndexes %}
-		{% if menuIndex != -1 %}
-			{% for aMenuIndex in subMenuIndexes %}
-				{% if aMenuIndex == menuIndex %}
-					{% assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] %}
-					{% assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] %}
-					{% assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] %}
-					{% continue %}
-				{% endif %}
-			{% endfor %}
-		{% endif %}
-	{% endfor %}
-	{% for aMenuIndex in subMenuIndexes %}
-		{% if aMenuIndex == -1 %}
-			{% assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] %}
-			{% assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] %}
-			{% assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] %}
-			{% continue %}
-		{% endif %}
-	{% endfor %}
+	{%- for menuIndex in sortedSubMenuIndexes -%}
+		{%- if menuIndex != -1 -%}
+			{%- for aMenuIndex in subMenuIndexes -%}
+				{%- if aMenuIndex == menuIndex -%}
+					{%- assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] -%}
+					{%- assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] -%}
+					{%- assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] -%}
+					{%- continue -%}
+				{%- endif -%}
+			{%- endfor -%}
+		{%- endif -%}
+	{%- endfor -%}
+	{%- for aMenuIndex in subMenuIndexes -%}
+		{%- if aMenuIndex == -1 -%}
+			{%- assign sortedSubMenuTitles = sortedSubMenuTitles | push: subMenuTitles[forloop.index0] -%}
+			{%- assign sortedSubMenuUrls = sortedSubMenuUrls | push: subMenuUrls[forloop.index0] -%}
+			{%- assign sortedSubMenuLinks = sortedSubMenuLinks | push: subMenuLinks[forloop.index0] -%}
+			{%- continue -%}
+		{%- endif -%}
+	{%- endfor -%}
 
 
 
-	{% for subMenuTitle in sortedSubMenuTitles %}
+	{%- for subMenuTitle in sortedSubMenuTitles -%}
 	
 		<!-- Repeat the above, but now for the submenu title, building the subsub menu tables -->
 
-		{% assign subsubMenuTitles = "" | split: "" %}
-		{% assign subsubMenuIndexes = "" | split: "" %}
-		{% assign subsubMenuUrls = "" | split: "" %}
-		{% assign subsubMenuLinks = "" | split: "" %}
+		{%- assign subsubMenuTitles = "" | split: "" -%}
+		{%- assign subsubMenuIndexes = "" | split: "" -%}
+		{%- assign subsubMenuUrls = "" | split: "" -%}
+		{%- assign subsubMenuLinks = "" | split: "" -%}
 
-		{% for ape in topTitlePages %}
-			{% if ape.menuSubs != nil %}
-				{% for sub in ape.menuSubs %}
-					{% if sub.title == subMenuTitle %}
-						{% if sub.sub != nil %}
-							{% for subsub in sub.sub %}
-								{% assign subsubMenuTitles = subsubMenuTitles | push: subsub.title %}
-								{% if subsub.index != nil %}
-									{% assign subsubMenuIndexes = subsubMenuIndexes | push: subsub.index %}
-								{% else %}
-									{% assign subsubMenuIndexes = subsubMenuIndexes | push: -1 %}
-								{% endif %}
-								{% if subsub.url != nil %}
-									{% if subsub.anchorId != nil %}
-										{% assign urlWithAnchorId = subsub.url | append: '#' | append: subsub.anchorId %}
-									{% else %}
-										{% assign urlWithAnchorId = subsub.url %}
-									{% endif %}
-								{% else %}
-									{% if subsub.anchorId != nil %}
-										{% assign urlWithAnchorId = ape.url | append: '#' | append: subsub.anchorId %}
-									{% else %}
-										{% assign urlWithAnchorId = ape.url %}
-									{% endif %}
-								{% endif %}
-								{% assign subsubMenuUrls = subsubMenuUrls | push: urlWithAnchorId %}
-								{% if subsub.link != nil %}
-									{% assign subsubMenuLinks = subsubMenuLinks | push: subsub.link %}
-								{% else %}
-									{% assign subsubMenuLinks = subsubMenuLinks | push: true %}
-								{% endif %}
-							{% endfor %}
-						{% endif %}
-					{% endif %}
-				{% endfor %}
-			{% endif %}
-		{% endfor %}
+		{%- for ape in topTitlePages -%}
+			{%- if ape.menuSubs != nil -%}
+				{%- for sub in ape.menuSubs -%}
+					{%- if sub.title == subMenuTitle -%}
+						{%- if sub.sub != nil -%}
+							{%- for subsub in sub.sub -%}
+								{%- assign subsubMenuTitles = subsubMenuTitles | push: subsub.title -%}
+								{%- if subsub.index != nil -%}
+									{%- assign subsubMenuIndexes = subsubMenuIndexes | push: subsub.index -%}
+								{%- else -%}
+									{%- assign subsubMenuIndexes = subsubMenuIndexes | push: -1 -%}
+								{%- endif -%}
+								{%- if subsub.url != nil -%}
+									{%- if subsub.anchorId != nil -%}
+										{%- assign urlWithAnchorId = subsub.url | append: '#' | append: subsub.anchorId -%}
+									{%- else -%}
+										{%- assign urlWithAnchorId = subsub.url -%}
+									{%- endif -%}
+								{%- else -%}
+									{%- if subsub.anchorId != nil -%}
+										{%- assign urlWithAnchorId = ape.url | append: '#' | append: subsub.anchorId -%}
+									{%- else -%}
+										{%- assign urlWithAnchorId = ape.url -%}
+									{%- endif -%}
+								{%- endif -%}
+								{%- assign subsubMenuUrls = subsubMenuUrls | push: urlWithAnchorId -%}
+								{%- if subsub.link != nil -%}
+									{%- assign subsubMenuLinks = subsubMenuLinks | push: subsub.link -%}
+								{%- else -%}
+									{%- assign subsubMenuLinks = subsubMenuLinks | push: true -%}
+								{%- endif -%}
+							{%- endfor -%}
+						{%- endif -%}
+					{%- endif -%}
+				{%- endfor -%}
+			{%- endif -%}
+		{%- endfor -%}
 
 		<!-- Sort all 4 the lists based on the index of the subMenu that was read -->
-		{% assign sortedSubsubMenuTitles = "" | split: "" %}
-		{% assign sortedSubsubMenuIndexes = subsubMenuIndexes | sort %}
-		{% assign sortedSubsubMenuUrls = "" | split: "" %}
-		{% assign sortedSubsubMenuLinks = "" | split: "" %}
+		{%- assign sortedSubsubMenuTitles = "" | split: "" -%}
+		{%- assign sortedSubsubMenuIndexes = subsubMenuIndexes | sort -%}
+		{%- assign sortedSubsubMenuUrls = "" | split: "" -%}
+		{%- assign sortedSubsubMenuLinks = "" | split: "" -%}
 
-		{% for menuIndex in sortedSubsubMenuIndexes %}
-			{% if menuIndex != -1 %}
-				{% for aMenuIndex in subsubMenuIndexes %}
-					{% if aMenuIndex == menuIndex %}
-						{% assign sortedSubsubMenuTitles = sortedSubsubMenuTitles | push: subsubMenuTitles[forloop.index0] %}
-						{% assign sortedSubsubMenuUrls = sortedSubsubMenuUrls | push: subsubMenuUrls[forloop.index0] %}
-						{% assign sortedSubsubMenuLinks = sortedSubsubMenuLinks | push: subsubMenuLinks[forloop.index0] %}
-						{% continue %}
-					{% endif %}
-				{% endfor %}
-			{% endif %}
-		{% endfor %}
-		{% for aMenuIndex in subsubMenuIndexes %}
-			{% if aMenuIndex == -1 %}
-				{% assign sortedSubsubMenuTitles = sortedSubsubMenuTitles | push: subsubMenuTitles[forloop.index0] %}
-				{% assign sortedSubsubMenuUrls = sortedSubsubMenuUrls | push: subsubMenuUrls[forloop.index0] %}
-				{% assign sortedSubsubMenuLinks = sortedSubsubMenuLinks | push: subsubMenuLinks[forloop.index0] %}
-				{% continue %}
-			{% endif %}
-		{% endfor %}
+		{%- for menuIndex in sortedSubsubMenuIndexes -%}
+			{%- if menuIndex != -1 -%}
+				{%- for aMenuIndex in subsubMenuIndexes -%}
+					{%- if aMenuIndex == menuIndex -%}
+						{%- assign sortedSubsubMenuTitles = sortedSubsubMenuTitles | push: subsubMenuTitles[forloop.index0] -%}
+						{%- assign sortedSubsubMenuUrls = sortedSubsubMenuUrls | push: subsubMenuUrls[forloop.index0] -%}
+						{%- assign sortedSubsubMenuLinks = sortedSubsubMenuLinks | push: subsubMenuLinks[forloop.index0] -%}
+						{%- continue -%}
+					{%- endif -%}
+				{%- endfor -%}
+			{%- endif -%}
+		{%- endfor -%}
+		{%- for aMenuIndex in subsubMenuIndexes -%}
+			{%- if aMenuIndex == -1 -%}
+				{%- assign sortedSubsubMenuTitles = sortedSubsubMenuTitles | push: subsubMenuTitles[forloop.index0] -%}
+				{%- assign sortedSubsubMenuUrls = sortedSubsubMenuUrls | push: subsubMenuUrls[forloop.index0] -%}
+				{%- assign sortedSubsubMenuLinks = sortedSubsubMenuLinks | push: subsubMenuLinks[forloop.index0] -%}
+				{%- continue -%}
+			{%- endif -%}
+		{%- endfor -%}
 
 		<div class="item">
 			<!-- Sub menu item -->
-			{% if sortedSubsubMenuTitles.size == 0 %}
-				{% if sortedSubMenuLinks[forloop.index0] != false %}
-					{% if sortedSubMenuUrls[forloop.index0] == page.url %}
+			{%- if sortedSubsubMenuTitles.size == 0 -%}
+				{%- if sortedSubMenuLinks[forloop.index0] != false -%}
+					{%- if sortedSubMenuUrls[forloop.index0] == page.url -%}
 						<div class="sub-isActivePage">
 							<div class="disclosure"><p></p></div>
 							<div class="title">
 								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
 							</div>
 						</div>
-					{% else %}
+					{%- else -%}
 						<div class="sub-hasLink">
 							<div class="disclosure"><p></p></div>
 							<div class="title">
 								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
 							</div>
 						</div>
-					{% endif %}
-				{% else %}
+					{%- endif -%}
+				{%- else -%}
 					<div class="sub">
 						<div class="disclosure"><p></p></div>
 						<div class="title">
 							<p>{{ subMenuTitle }}</p>
 						</div>
 					</div>
-				{% endif %}
-			{% else %}
+				{%- endif -%}
+			{%- else -%}
 				<input type="checkbox" id="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
-				{% if sortedSubMenuLinks[forloop.index0] != false %}
-					{% if sortedSubMenuUrls[forloop.index0] == page.url %}
+				{%- if sortedSubMenuLinks[forloop.index0] != false -%}
+					{%- if sortedSubMenuUrls[forloop.index0] == page.url -%}
 						<div class="sub-isActivePage">
 							<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
 								<p class="symbol"><!-- will be filled by disclosure indicator --></p>
@@ -225,7 +225,7 @@
 								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
 							</div>
 						</div>
-					{% else %}
+					{%- else -%}
 						<div class="sub-hasLink">
 							<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
 								<p class="symbol"><!-- will be filled by disclosure indicator --></p>
@@ -234,8 +234,8 @@
 								<a href="{{ sortedSubMenuUrls[forloop.index0] }}"><p>{{ subMenuTitle }}</p></a>
 							</div>
 						</div>
-				{% endif %}
-				{% else %}
+				{%- endif -%}
+				{%- else -%}
 					<div class="sub">
 						<label class="disclosure show-hover" for="{{ subMenuTitle | append:'-vmenu-' | append: include.label-modifier }}">
 							<p class="symbol"><!-- will be filled by disclosure indicator --></p>
@@ -244,40 +244,40 @@
 							<p>{{ subMenuTitle }}</p>
 						</div>
 					</div>
-				{% endif %}
+				{%- endif -%}
 
 			    <!-- Sub sub menu items -->
-	    		{% for subsubTitle in sortedSubsubMenuTitles %}
-			    	{% if sortedSubsubMenuLinks[forloop.index0] != false %}
-				    	{% if sortedSubsubMenuUrls[forloop.index0] == page.url %}
+	    		{%- for subsubTitle in sortedSubsubMenuTitles -%}
+			    	{%- if sortedSubsubMenuLinks[forloop.index0] != false -%}
+				    	{%- if sortedSubsubMenuUrls[forloop.index0] == page.url -%}
 							<div class="subsub-isActivePage">
 								<div class="disclosure"><p></p></div>
 								<div class="title">
 									<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
 								</div>
 		    				</div>
-						{% else %}
+						{%- else -%}
 							<div class="subsub-hasLink">
 								<div class="disclosure"><p></p></div>
 								<div class="title">
 									<a href="{{ sortedSubsubMenuUrls[forloop.index0] }}"><p>{{ subsubTitle }}</p></a>
 								</div>
 		    				</div>
-						{% endif %}
-					{% else %}
+						{%- endif -%}
+					{%- else -%}
 						<div class="subsub">
 							<div class="disclosure"><p></p></div>
 							<div class="title">
 								<p>{{ subsubTitle }}</p>
 							</div>
 		    			</div>
-					{% endif %}
-		    	{% endfor %}			
-    		{% endif %}
+					{%- endif -%}
+		    	{%- endfor -%}			
+    		{%- endif -%}
 		</div>
 		
-	{% endfor %}
+	{%- endfor -%}
 	</div>
 </nav>
 
-{% endif %}
+{%- endif -%}
