--- a/_layouts/content-blocks.html
+++ b/_layouts/content-blocks.html
@@ -3,6 +3,6 @@ layout: default
 ---
 <div class="cblock-page">
 
-	{% include cblock-row.html title="Content Blocks" cblocks=site.data.cblocks %}
+	{%- include cblock-row.html title="Content Blocks" cblocks=site.data.cblocks -%}
 	
 </div>
