--- a/_includes/banner-area.html
+++ b/_includes/banner-area.html
@@ -1,40 +1,43 @@
-{% if site.data.setup.banner-position == 'top-fixed' %}
-	{% assign banner-classes = 'banner-area banner-area-outside-dom' %}
-{% else %}
-	{% assign banner-classes = 'banner-area banner-area-in-dom' %}
-{% endif%}
+{% comment %}<!--
+
+Layout of the banner area.
+
+The banner area is complex in the sense that some elements are out of the DOM permanently and some elements are out of the DOM depending on the settings in the site.data.setup file.
+
+The height of the 'banner' class must be specified explicitly in the theme.scss file.
+
+The icon, title and label are placed on top of the banner using relative/absolute positioning.
+
+The conditional part for 'top-fixed' is present to make sure that the content of the column-panel is properly offset from the top of the screen such that no partion of it is positioned behind the banner-area. It has the same classes and structure as the banner-area so that it auto-adjusts for menubar switching (using the banner-menu-symbol).
+
+If changes are made to this file that increase the height of the banner-area that is placed outside the DOM, the HTML code can compensate for the height increase by specifying a height for the add-to-banner-area-height class.
+
+-->{%- endcomment -%}
+
+{%- if site.data.setup.banner-position == 'top-fixed' -%}
+	{%- assign banner-classes = 'banner-area banner-area-outside-dom' -%}
+{%- else -%}
+	{% assign banner-classes = 'banner-area banner-area-in-dom' -%}
+{%- endif -%}
 
 <input type="checkbox" id="banner-menu-symbol">
 <div class="{{ banner-classes }}">
 	<div class="banner"></div>
-	<!-- the following elements are outide the DOM (positioned absolute relative to the banner-area) -->
-	<div class="icon-container">{% include banner-icon.html %}</div>
-	<div class="title-area-container">{% include banner-title-area.html %}</div>
+	<!-- The following elements are permanently outside the DOM -->
+	<div class="icon-container">{%- include banner-icon.html -%}</div>
+	<div class="title-area-container">{%- include banner-title-area.html -%}</div>
 	<div class="label-container"><label for="banner-menu-symbol"><p><!-- empty but necessary! --></p></label></div>
-	<!-- from here on the elements are part of the DOM again -->
+	<!-- This is part of the DOM again (unless the banner area is outside the DOM) -->
 	<div class="menubar-top-separator"></div>
-	{% include menubar.html %}
+	{%- include menubar.html -%}
 	<div class="menubar-bottom-separator"></div>
 </div>
-{% if site.data.setup.banner-position == 'top-fixed' %}
-	{% comment %}<!--
-
-	In the top-fixed banner position, the banner-area is placed outside the DOM. Without the HTML in this part the content area would show up behind the menubar and behind the banner (possibly hidden by the background settings).
-	
-	If changes are made to this file that increase the height of the banner-area that is placed outside the DOM, the HTML code in this part can compensate for that height increase by specifying a height for the add-to-banner-area-height class and giving it an appropriate background color when needed.
-
-	-->{% endcomment %}
+{%- if site.data.setup.banner-position == 'top-fixed' -%}
 	<div class="banner-area invisible">
 		<div class="banner"></div>
 		<div class="menubar-top-separator"></div>
-		<!-- Create a list of top menu item titles 
-		{% assign topTitles = "" | split: "" %}
-		{% assign sortedPages = site.pages | where:'menuInclude', true | where_exp:'item', 'item.menuTopTitle != nil' | sort: 'menuTopIndex', 'last' %}
-		{% for ape in sortedPages %}{% assign topTitles = topTitles | push: ape.menuTopTitle %}{% endfor %}
-		{% assign topTitles = topTitles | uniq %}
--->
-		{% include menubar.html %}
+		{%- include menubar.html -%}
 		<div class="menubar-bottom-separator"></div>
 		<div class="add-to-banner-area-height"></div>
 	</div>
-{% endif %}
+{%- endif -%}
