--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,3 +1,12 @@
+{% comment %}<!--
+
+Layout of the footer.
+
+Configuration:
+	site.description: The text to be displayed.
+
+-->{%- endcomment -%}
+
 <footer>
 	<div>
 		<p>{{ site.description | escape }}</p>
