--- a/_includes/google-analytics.html
+++ b/_includes/google-analytics.html
@@ -1,3 +1,12 @@
+{% comment %}<!--
+
+The script that allows the use of google analytics.
+
+Configuration:
+	site.google_analytics: The site-id for the site issued by google analytics.
+
+-->{%- endcomment -%}
+
 <script>
   (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
   (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
