--- a/_includes/menubar-icon.html
+++ b/_includes/menubar-icon.html
@@ -16,6 +16,5 @@ Example: <div class='myclass display-block-narrow'><p>Hello</p></div>
 
 Will display the text "Hello" only when the narrow layout is in use.
 
--->{% endcomment %}
-<div class="menubar-icon">
-</div>
+-->{%- endcomment -%}
+<div class="menubar-icon"></div>
