--- a/_includes/tertiary-column.html
+++ b/_includes/tertiary-column.html
@@ -1,4 +1,4 @@
 <!-- This widget divider will only show up when the tertiary column content is merged into the secondary column-->
 <div class="tertiary-widget-divider"></div>
 
-<div class="widget">{% include widgets/browser-info.html %}</div>
+<div class="widget">{%- include widgets/browser-info.html -%}</div>
