--- a/_includes/widgets/categories.html
+++ b/_includes/widgets/categories.html
@@ -1,19 +1,19 @@
-{% if jekyll.environment != 'production' and site.data.setup.fast-content-build %}{% else %}
+{%- if jekyll.environment != 'production' and site.data.setup.fast-content-build -%}{%- else -%}
 <!-- Categories widget -->
 <div class="categories">
-	{% assign categories = 'Categories' %}
-	{% if site.data.text-for.tCategories %}{% assign categories = site.data.text-for.tCategories %}{% endif %}
+	{%- assign categories = 'Categories' -%}
+	{%- if site.data.text-for.tCategories -%}{%- assign categories = site.data.text-for.tCategories -%}{%- endif -%}
 	<input type="checkbox" id={{ "category-checkbox" | append: include.label-modifier }}>
 	<label for={{ "category-checkbox" | append: include.label-modifier }}><h1>{{ categories }}</h1></label>
-	{% assign cats = site.pages | where:'layout', 'category-page' | sort:'title' %}
-	{% if cats.size > 0 %}
-		{% for cat in cats %}
+	{%- assign cats = site.pages | where:'layout', 'category-page' | sort:'title' -%}
+	{%- if cats.size > 0 -%}
+		{%- for cat in cats -%}
 			<div class="title"><a href="{{ cat.url }}"><p>{{ cat.title | capitalize }}</p></a></div>
-		{% endfor %}
-	{% else %}
-		{% assign no-categories = 'None' %}
-		{% if site.data.text-for.tNoCategories %}{% assign no-categories = site.data.text-for.tNoCategories %}{% endif %}
+		{%- endfor -%}
+	{%- else -%}
+		{%- assign no-categories = 'None' -%}
+		{%- if site.data.text-for.tNoCategories -%}{%- assign no-categories = site.data.text-for.tNoCategories -%}{%- endif -%}
 		<div class="title"><p>{{ no-categories | capitalize }}</p></div>
-	{% endif %}
+	{%- endif -%}
 </div>
-{% endif %}
+{%- endif -%}
